--- a/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
+++ b/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
@@ -2,6 +2,7 @@
  * Layout commons.
  */
 @use "~@conversionxl/cxl-lumo-styles/scss/mixins";
+@use "~@conversionxl/cxl-lumo-styles/scss/mq";
 
 $toggle-icon: "lumo:angle-right";
 
@@ -90,10 +91,18 @@ slot[name="action-bar"]::slotted(div) {
 /**
  * Dashboard layout
  */
-:host([layout^="1c"]:not([layout="1c"][theme~="cxl-dashboard"])){
+:host([layout^="1c"][theme~="cxl-dashboard"]:not([layout="1c"])) {
   main {
+    overflow: hidden;
+
     > slot {
-      padding: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+      margin: 0 calc(-1 * var(--lumo-space-m));
+
+      @media #{mq.$medium} {
+        margin: 0 auto;
+      }
     }
   }
 }
